kubernetes/main/apps/home/immich/proxy/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-proxy
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich-proxy
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-external-networking
            io.kubernetes.pod.namespace: networking
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    # same-node ClusterIP replies miss CT reverse-xlate (socketLB
    # hostNamespaceOnly + endpointRoutes) and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: immich
            app.kubernetes.io/controller: immich
            io.kubernetes.pod.namespace: home
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home
            app.kubernetes.io/name: immich
            app.kubernetes.io/controller: immich
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
